adicionado horas, minutos, segundos em javaScript

--- a/Hora do Dia/index.html
+++ b/Hora do Dia/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTC-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hora do dia</title>
+    <title>Hora Certa</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="carregar()">
     <header>
-        <h1>Hora do dia</h1>
+        <h1>Hora Certa</h1>
         <h2 id="hora"></h2>
         
     </header>
